Добавлены presigned ссылки для изображений моих объявлений и рекламы